# qt-cmake-project

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  Doxyfile.in  README.md  README_EN.md
.github/workflows/: ci.yml  macos.yml  ubuntu.yml  windows.yml
app/: main.cpp
cmake/: CPack.cmake
data/: res.qrc  res.rc
examples/: CMakeLists.txt  README.md
examples/WoodenFish/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
examples/demo/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.hpp  logo.rc  main.cpp  res.qrc
include/demo/: DebugDemo
include/demo/internal/: DebugDemo.h  DebugDemo.hpp
include/knock/: Knock
include/knock/internal/: Knock.h
resources/: win.rc
scripts/: windows-publish.ps1
src/: CMakeLists.txt  DebugDemo.cpp  Knock.cpp  MainWindow.cpp  main.cpp
src/core/: count.cpp  count.hpp
src/ui/: InfoWindow.cpp  InfoWindow.hpp
